--- a/wp.html
+++ b/wp.html
@@ -256,6 +256,6 @@
                </script>
                <style>
                  #dify-chatbot-bubble-button {
-                   background-color: #1C64F2 !important;
+                   background-color: #1e0eff !important;
                  }
                </style>
